Add some corrections

--- a/notebooks/EDA - Feature Engineering.ipynb
+++ b/notebooks/EDA - Feature Engineering.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "- __Cabin__ - The cabin number where the passenger is staying. Takes the form deck/num/side, where side can be either P for Port or S for Starboard.\n",
     "\n",
-    "- __estination__ - The planet the passenger will be debarking to.\n",
+    "- __Destination__ - The planet the passenger will be debarking to.\n",
     "\n",
     "- __Age__ - The age of the passenger.\n",
     "\n",
@@ -1030,7 +1030,7 @@
    "source": [
     "expences = ['RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck']\n",
     "\n",
-    "train['Total_expences'] = train['Expenditure'] = train[expences].sum(axis=1)"
+    "train['Total_expences'] = train[expences].sum(axis=1)"
    ]
   },
   {
